# 2ch-short-maker

./: README.md  compose.prod.yaml  compose.yaml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.dev.yaml  compose.yaml  pyproject.toml
backend/app/: main.py  models.py  utils.py  video_generator.py
backend/app/api/: deps.py  main.py
backend/app/api/routes/: videos.py
backend/app/core/: db.py  env.py  minio_client.py  video_generator.py
backend/src/: app.py  video_generator.py
backend/static/aquestalkplayer/: AquesTalkPlayer.preset
frontend/: .env.example  Dockerfile  README.md  biome.json  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/src/app/explore/: page.tsx
frontend/src/components/: download-button.tsx  explore.tsx  generate-form.tsx  header.tsx  share-button.tsx  theme-toggle.tsx  thumbnail-card.tsx  thumbnail-swiper.tsx  video-card.tsx  video-swiper.tsx
frontend/src/types/: Videos.ts  video.ts
