[project]
name = "backend"
version = "0.1.0"
description = "backend"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "budoux>=0.6.3",
    "fastapi[standard]>=0.115.6",
    "moviepy>=2.1.1",
    "openai>=1.58.1",
    "pillow>=10.4.0",
    "python-dotenv>=1.0.1",
]

[dependency-groups]
dev = ["ruff>=0.8.4"]

[tool.ruff]
line-length = 120
