[project]
name = "backend"
version = "0.1.0"
description = "backend"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "fastapi[standard]>=0.115.6",
    "googlesearch-python>=1.3.0",
    "mecab-python3>=1.0.10",
    "minio>=7.2.13",
    "moviepy>=2.1.1",
    "openai>=1.58.1",
    "openai-agents>=0.0.17",
    "pillow>=10.4.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "sqlmodel>=0.0.22",
    "trafilatura[all]>=2.0.0",
    "unidic>=1.1.0",
]

[dependency-groups]
dev = ["ruff>=0.8.4"]

[tool.ruff]
line-length = 120
